@@ -6208,4 +6208,6 @@
 	  From Ken Pettit (2013-12-12)
 	* arch/arm/src/a1x/chip/a1x_timer.h:  Timer register bit definitions
 	  (incomplete on initial check-in) (2013-12-12).
+	* lbc/time/lib_strftime.c: Need null-termination on the the string
+	  generated by strftime().  From Max Holtzberg (2013-12-12).
 
